Added Nokogiri to open URL, and sorted through data to extract URL, not perfect, not tested

--- a/views/result.erb
+++ b/views/result.erb
@@ -1,1 +1,17 @@
-The URL you requested is: <%= @url %>
+<body>
+
+  <p>The URL you requested is: <%= @url %></p>
+  </br>
+  </br>
+  <%= @links %>
+  </br>
+  </br>
+  <%= @sorted_links %>
+  </br>
+  </br>
+  <%= @twitter %>
+  </br>
+  </br>
+  <%= @github %>
+
+</body>
