--- a/views/index.erb
+++ b/views/index.erb
@@ -4,6 +4,10 @@
 
   <p>Enter a URL you want to check:</p>
 
+  <% if flash[:error] %>
+	 <%= flash[:error] %>
+	<% end %>
+
   <form action="/url" method="post">
     <input type="text" name="url">
     <input type="submit" value="Get Info">
