--- a/views/index.erb
+++ b/views/index.erb
@@ -3,6 +3,7 @@
   <h1>Page Scraper</h1>
 
   <p>Enter a URL you want to check:</p>
+  <p>Please include http:// or https:// in your URL</p>
 
   <% if flash[:error] %>
 	 <%= flash[:error] %>
